  * Assume /usr is mounted before the udev rules are invoked, which allows
    the udev helper scripts to be removed and thus
    /lib/udev/hotplug.functions to no longer be required.
    Closes: #810115.
  * Drop joystick preinst and postinst, they were only needed for
    upgrades to Squeeze.
  * Drop the workaround for Acrux gamepads, they've been supported by
    the kernel since 2.6.39.

 -- Stephen Kitt <skitt@debian.org>  Fri, 08 Jan 2016 23:01:29 +0100

joystick (1:1.4.8-2) unstable; urgency=medium

  * Add pm-utils script to re-start inputattach after waking from
    suspend. Closes: #799729. Thanks to John Morris for the fix!
  * Rewrite debian/copyright in DEP5 format.
  * Standards-Version 3.9.6, no change required.

 -- Stephen Kitt <skitt@debian.org>  Sat, 26 Sep 2015 15:33:58 +0200

joystick (1:1.4.8-1) unstable; urgency=medium

  * New upstream release.
  * Export upstream signing key using export-minimal.
  * Install js-set-enum-leds.

 -- Stephen Kitt <skitt@debian.org>  Sun, 26 Apr 2015 18:38:04 +0200

joystick (1:1.4.7-2) unstable; urgency=medium

  * Change the architecture to "linux-any" since both packages are
    Linux-specific.
  * Add upstream signing key.

 -- Stephen Kitt <skitt@debian.org>  Sat, 12 Jul 2014 07:17:59 +0200

joystick (1:1.4.7-1) unstable; urgency=medium

  * New upstream release:
    - Fix Spaceball 4000FLX initialization with newer firmware.
      Closes: #298494. Thanks Andrew Basterfield!
  * Standards-Version 3.9.5, no change required.
  * Add VCS URIs.

 -- Stephen Kitt <skitt@debian.org>  Wed, 08 Jan 2014 07:53:52 +0100

joystick (1:1.4.6-1) unstable; urgency=low

  * New upstream release:
    - Disable CRTSCTS on ELO touchscreens. Closes: #699030. Thanks Thierry
      Bultel!
    - Handle long device names correctly. Closes: #706744. Thanks Ralf
      Jung!
  * Drop hardening.patch, merged upstream.
  * Standards-Version 3.9.4, no change required.
  * Switch to my Debian address.
